--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="div.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNMBAOFJL6C_edrH0kYsSwxo6KSWSGQh4CdNhmuNcTX4pBVPUCH7xpUE4DT2uCwFrlayU&usqp=CAU">
     <!-- google font -->
